[package]
name = "quake-log-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["serde"] }
lazy_static = "1.4.0"
ratatui = { version = "0.23.0", features = ["serde"] }
regex = "1.10.0"
serde = {version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.3.0"
